# youterm

./: .gitignore  CHANGELOG.md  README.md  setup.cfg  youterm.py
src/: youterm.py
src/utils/: text.py
src/youterm/: __main__.py  main.py  text.py  yt.py
src/youterm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/youterm/utils/: colorizer.py  date.py  text.py
utils/: colorizer.py  date.py  text.py
