[metadata]
name = youterm
version = 0.1.1
author = Marco Radocchia
author_email = marco.radocchia@outlook.com
description = CLI tool to search for YouTube videos and play selected video/audio via MPV 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcoradocchia/youterm
project_urls =
    Bug Tracker = https://github.com/marcoradocchia/youterm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Environment :: Console
    Natural Language :: English
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Sound/Audio

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    youterm = youterm.__main__:main
